Minor improvements to the CSS for displaying email bodies on the dashboard; bodies no longer spill out of the table

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -1,3 +1,10 @@
+.email{
+  overflow: hidden;
+  word-wrap:break-word;
+  word-break:break-all;
+}
+
+
 /*!
  * Start Bootstrap - SB Admin 2 v3.3.7+1 (http://startbootstrap.com/template-overviews/sb-admin-2)
  * Copyright 2013-2016 Start Bootstrap
